@@ -18,26 +18,27 @@ package org.debian.maven.plugin;
 
 import java.io.File;
 
+import org.apache.maven.plugins.annotations.Mojo;
+import org.apache.maven.plugins.annotations.Parameter;
+
 /**
  * Install the javadoc jar files into the debian/ directory
  *
  * @author Ludovic Claude
- * @goal install-doc
  */
+@Mojo(name = "install-doc")
 public class InstallDocMojo extends SysInstallDocMojo {
 
     /**
      * Maven repository root
-     *
-     * @parameter expression="${maven.repo.local}"
      */
+    @Parameter(property = "maven.repo.local")
     private File mavenRepoLocal;
 
     /**
      * If true, use local Maven repository for installation
-     *
-     * @parameter expression="${use.maven.repo.local}"
      */
+    @Parameter(property = "use.maven.repo.local")
     private boolean useMavenRepoLocal;
 
     // ----------------------------------------------------------------------
